--- a/public/index.html
+++ b/public/index.html
@@ -2,83 +2,38 @@
 <html lang="en">
 
 <head>
-  <title>Chatapp</title>
+  <title>Chatter</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <style>
-    form {
-      padding: 20px;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      padding-right: 50px;
-    }
-
-    #messages {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      width: 100%;
-    }
-
-    #messages li {
-      padding: 5px 10px;
-    }
-
-    #messages li:nth-child(odd) {
-      background: #eee;
-    }
-  </style>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
+    integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 </head>
 
 <body>
-  <div class="container-fluid">
-    <div class="row">
-      <ul id="messages"></ul>
-    </div>
-    <div class="row">
-      <div class="col-lg-6">
-        <form action="">
-          <div class="input-group">
-            <input id="m" autocomplete="off" type="text" class="form-control" placeholder="Message..."
-              aria-label="Message...">
-            <span class="input-group-btn">
-              <button class="btn btn-secondary" type="submit">Send</button>
-            </span>
-          </div>
-        </form>
-      </div>
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="display-3">Tech space chatter</h1>
+      <p class="lead">Select which room you'd like to join below!!!</p>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+  <div class="container-fluid">
+    <div class="row">
+      <ul class="list-group col">
+        <a href="/javascript" class="list-group-item list-group-item-action">Javascript</a>
+        <a href="/swift" class="list-group-item">Swift</a>
+        <a href="/css" class="list-group-item">CSS</a>
+      </ul>
+    </div>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
+    integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
     crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
+    integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
     crossorigin="anonymous"></script>
-  <script src="/socket.io/socket.io.js"></script>
-  <script>
-    const socket = io();
-    $('form').submit(() => {
-      socket.emit('message', $('#m').val());
-      $('#m').val('');
-      return false;
-    });
-
-    socket.on('connect', () => {
-      // emiting to everybody
-      socket.emit('message', 'user connected');
-    })
-
-    socket.on('message', (msg) => {
-      $('#messages').append($('<li>').text(msg));
-    })
-  </script>
 </body>
 
 </html>
