--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,39 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-  <title>Chatter</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
-    integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login page</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/login.css">
 </head>
 
 <body>
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1 class="display-3">Tech space chatter</h1>
-      <p class="lead">Select which room you'd like to join below!!!</p>
+
+    <div id="container">
+        <div id="content-wrap">
+            <header>
+                <div id="title">
+                    <h1>Enter chatbox</h1>
+                </div>
+            </header>
+            <div id="login">
+                <input type="tel" id="logintype" name="phone" placeholder="Nickname"></a> <a href="rooms.html">
+                    <img alt="login img" src="assets/img/login.png" width="30" height="30"></a>
+                <div id="logintekst">
+                    <p>Here’s some information about this chat.
+                        Could be anything actually. Like, it’s soo
+                        cool! Oh my god, it’s amazing! Nothing
+                        beats this chat. Like, you can talk and
+                        other people talk back at ya! </p>
+                </div>
+            </div>
+        </div>
+        <footer>
+
+        </footer>
     </div>
-  </div>
-  <div class="container-fluid">
-    <div class="row">
-      <ul class="list-group col">
-        <a href="/javascript" class="list-group-item list-group-item-action">Javascript</a>
-        <a href="/swift" class="list-group-item">Swift</a>
-        <a href="/css" class="list-group-item">CSS</a>
-      </ul>
-    </div>
-  </div>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
-    integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
-    integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
-    crossorigin="anonymous"></script>
 </body>
 
 </html>
