layout van rooms aangepast en readme met installatie aanwijzingen toegevoegd.

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
                 </div>
             </header>
             <div id="login">
-                <input type="tel" id="logintype" name="phone" placeholder="Nickname"></a> <a href="rooms.html">
+                <input type="tel" id="logintype" name="phone" placeholder="Nickname"></a> <a href="user.html">
                     <img alt="login img" src="assets/img/login.png" width="30" height="30"></a>
                 <div id="logintekst">
                     <p>Here’s some information about this chat.
