--- a/public/rooms.html
+++ b/public/rooms.html
@@ -2,38 +2,66 @@
 <html lang="en">
 
 <head>
-  <title>Chatapp | Rooms</title>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
-    integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rooms page</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+  <link rel="stylesheet" href="assets/css/rooms.css">
 </head>
 
-<body>
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1 class="display-3">Rooms</h1>
-      <p class="lead">Select which room you'd like to join below!!!</p>
-    </div>
-  </div>
-  <div class="container-fluid">
-    <div class="row">
-      <ul class="list-group col">
-        <a href="/chillout_place" class="list-group-item list-group-item-action">Chillout place</a>
-        <a href="/nightlife" class="list-group-item">Nightlife</a>
+<div id="container">
+  <div id="content-wrap">
+    <header>
+      <div id="title">
+        <h1>Choose room</h1>
+        <p>#username</p>
+      </div>
+      <div id="link_rooms"><a href="rooms.html">Rooms</a></div>
+      <div id="link_users"><a href="#">Users</a></div>
+      <div id="link_quit"><a href="index.html">Quit</a></div>
+    </header>
+    <div id="roomlist"><br>
+      <div class="row">
+        <a href="/chillout_place" class="list-group-item list-group-item-action">Chillout place</a><br><br>
+        <a href="/nightlife" class="list-group-item">Nightlife</a><br><br>
         <a href="/series_movies" class="list-group-item">Series & Movies</a>
-      </ul>
+      </div>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
-    integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
-    integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
-    crossorigin="anonymous"></script>
+</div>
+</div>
+<footer>
+
+</footer>
+</div>
 </body>
 
-</html>
+</html>`
+
+
+
+
+<!-- <div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-3">Rooms</h1>
+    <p class="lead">Select which room you'd like to join below!!!</p>
+  </div>
+</div>
+<div class="container-fluid">
+  <div class="row">
+    <ul class="list-group col">
+      <a href="/chillout_place" class="list-group-item list-group-item-action">Chillout place</a>
+      <a href="/nightlife" class="list-group-item">Nightlife</a>
+      <a href="/series_movies" class="list-group-item">Series & Movies</a>
+    </ul>
+  </div>
+</div>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+  integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+  crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
+  integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+  crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
+  integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
+  crossorigin="anonymous"></script> -->
